wayland surface sticks in compositor after crash of program
The examle program libdecoration_mutter_bug_buffer.tar.xz will crash when the minimise button in the top right corner is pressed. After this, its toplevel surface will stick around and overlay on top of everything:
It seems as if mutter is unable to manage these surfaces once the client disappeared. I've not found a way to reset the shell other than logout/login. This only happens with mutter + GNOME shell, but I cannot reproduce this on plain mutter, e.g. if started nested via mutter --nested --wayland
or from a vte.
This may be related to: #655 (closed)