window-actor: Destroy the actor despite stuck animations

Under very rare circumstances clients crash mid-animation at unexpected
times. In the worst case this can lead to a window-actor not getting
destroyed, stuck on the screen forever.

Since animations go through Gnome-Shell and therefore rely on relatively
complex logic, make our destruction code a bit more robust, allowing it
to destroy the actor even if unfinished animations are pending.

https://gitlab.gnome.org/GNOME/mutter/issues/863